vault/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vault-ui-ingress
  namespace: vault
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: vault.example.com
    http:
      paths:
      - backend:
          serviceName: vault-ui
          servicePort: http
